--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>rahafksa KSA</title>
+	<title>moody</title>
 	<noscript>
 		<link rel="stylesheet" href="ios7.min.css?_=d" type="text/css" />
 	</noscript>
