--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body onload="loadPackageInfo();loadPackages();">
 	<main id="content">
 		<span id="showAddRepo_" hidden>
-			<h2 role="header">rahafksa KSA</h2>
+			<h2 role="header">moody</h2>
 			<ul>
 				<li class="has-icon">
 					<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://rahafksa.github.io/" role="button" id="open_cydia">
