--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<li class="has-icon">
 				<a href="https://twitter.com/RAHAF__ksa" target="_blank" role="button">
 					<img style = "border-radius: 20%;" href="twitter.png" alt="" srcset="twitter.png 2x, twitter.png 3x" class="icon"/>
-					<label>Follow rahafksa</label>
+					<label>Follow Moody</label>
 				</a>
 			</li>
 		</ul>
