--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body onload="loadPackageInfo();loadPackages();">
 	<main id="content">
 		<span id="showAddRepo_" hidden>
-			<h2 role="header">rahafksa KSA</h2>
+			<h2 role="header">MOOODY</h2>
 			<ul>
 				<li class="has-icon">
 					<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://rahafksa.github.io/" role="button" id="open_cydia">
@@ -95,7 +95,7 @@
 			</li>
 		</ul>
 	</main>
-	<p style="text-align: center; font-size: 85%; margin-top: 10px;" role="footer" id="neo">rahafksa © 2020</p>
+	<p style="text-align: center; font-size: 85%; margin-top: 10px;" role="footer" id="neo">‏‎ Ｍ ＯＯＯＤＹ‏‎‏‎‏‎‏‎ـــ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـــ  © 2020</p>
 
 
 </ul></div>
