--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			</li>
 		</ul>
 	</main>
-	<p style="text-align: center; font-size: 85%; margin-top: 10px;" role="footer" id="neo">‏‎ Ｍ ＯＯＯＤＹ‏‎‏‎‏‎‏‎ـــ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـ ـــ  © 2020</p>
+	<p style="text-align: center; font-size: 85%; margin-top: 10px;" role="footer" id="neo">‏‎ Ｍ ＯＯＯＤＹ‏‎‏‎‏‎‏‎© 2020</p>
 
 
 </ul></div>
