--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					</a>
 				</li>
 			</ul>
-			<p style="text-align: center; font-size: 85%;" role="footer" id="neo">Repo: https://rahafksa.github.io/</p>
+			<p style="text-align: center; font-size: 85%;" role="footer" id="neo">Repo: https://modyksa.github.io/moody//</p>
 		</span>
 		<noscript>
 			<h2></h2><ul style="background:#ff0000"><center><li><p>Error JavaScript Disabled.</p></li></center></ul>
