--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title> ادوات السيديا</title>
+<title> ادوات سيديا</title>
 </head>
 <body>
 
@@ -44,7 +44,7 @@
 			<h2 role="header">MOOODY</h2>
 			<ul>
 				<li class="has-icon">
-					<a href="cydia://url/https://cydia.saurik.com/api/share#?source= https://modyksa.github.io/moody/" role="button" id="open_cydia">
+					<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://modyksa.github.io/moody/" role="button" id="open_cydia">
 						<img style = "border-radius: 20%;" href="cydia7.png" alt="" srcset="cydia7.png 2x, cydia7.png 3x" class="icon"/>
 						<label>Open Cydia</label>
 					</a>
