--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
 <div><ul class="btns">
 
-<li><div class="cydia"><a href="cydia://url/https://cydia.saurik.com/api/share#?source=***"><button class="cydiabtn">CYDIA</button></a></div></li>
+<li><div class="cydia"><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://modyksa.github.io/moody/"><button class="cydiabtn">CYDIA</button></a></div></li>
 
-<li><div class="sileo"> <a href="sileo://source/***"><button class="sileobtn">SILEO</button> </a></div></li>
+<li><div class="sileo"> <a href="sileo://source/https://modyksa.github.io/moody/"><button class="sileobtn">SILEO</button> </a></div></li>
 
-<li><div class="zebra"><a href="zbra://sources/add/***/"><button class="zebrabtn">ZEBRA</button> </a></div></li>
+<li><div class="zebra"><a href="zbra://sources/add/https://modyksa.github.io/moody//"><button class="zebrabtn">ZEBRA</button> </a></div></li>
 <h5>متجرAFSTORE</h5>
  
 <a href="http://cydia97.org/">اضغط لتحميل المتجر</a>
