--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<ul>
 				<li class="has-icon">
 				
-						<img style = "border-radius: 20%;" href="cydia7.png" alt="" srcset="cydia7.png 2x, cydia7.png 3x" class="icon"/>
+					<p>	<img style = "border-radius: 20%;" href="cydia7.png" alt="" srcset="cydia7.png 2x, cydia7.png 3x" class="icon"/> </p>
 						<label>Open Cydia</label>
 					</a>
 				</li>
