--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<li class="has-icon">
 				
 					<p>	<img style = "border-radius: 20%;" href="cydia7.png" alt="" srcset="cydia7.png 2x, cydia7.png 3x" class="icon"/> </p>
-						<label>Open Cydia</label>
+						 <p> <label>Open Cydia</label> </p>
 					</a>
 				</li>
 			</ul>
