--- a/index.html
+++ b/index.html
@@ -44,9 +44,14 @@
 			<h2 role="header">MOOODY</h2>
 			<ul>
 				<li class="has-icon">
-				
-					<p>	<img style = "border-radius: 20%;" href="cydia7.png" alt="" srcset="cydia7.png 2x, cydia7.png 3x" class="icon"/> </p>
-						 <p> <label>Open Cydia</label> </p>
+				<p>
+					<p>
+<p>
+	<img style = "border-radius: 20%;" href="cydia7.png" alt="" srcset="cydia7.png 2x, cydia7.png 3x" class="icon"/>
+ </p>
+						
+ <p> <label>Open Cydia</label> </p>
+
 					</a>
 				</li>
 			</ul>
