--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<img style = "border-radius: 20%;" href="cydia7.png" alt="" srcset="cydia7.png 2x, cydia7.png 3x" class="icon"/>
  </p>
 						
- <p> <label>Open Cydia</label> </p>
+ <p> <label> ☟ لنسخ السورس احتياطاً ☟ </label> </p>
 
 					</a>
 				</li>
