--- a/index.html
+++ b/index.html
@@ -41,7 +41,27 @@
 <body onload="loadPackageInfo();loadPackages();">
 	<main id="content">
 		<span id="showAddRepo_" hidden>
-			<h2 role="header">MOOODY</h2>
+			
+
+<ul>
+				<li class="has-icon">
+				<p>
+					<p>
+<p>
+	<a href="https://ammaripa.com/jailbreak?language=ar">هل جهازي يدعم الجلبريك اضغط هنا</a>
+ </p>
+						
+
+
+					</a>
+				</li>
+			</ul>
+
+
+
+
+
+<h2 role="header">MOOODY</h2>
 			<ul>
 				<li class="has-icon">
 				<p>
